--- a/website/about.html
+++ b/website/about.html
@@ -185,53 +185,41 @@
             <div class="container">
                 <p><img class="interest_pic" src="../lib/programming.PNG" alt="Image of programming fundamentals"></p>
                 <p class="info_text"><strong>How it started</strong><br><br>My entry point into coding
-                    was through the
-                    Grand-Theft-Auto(GTA) modding community where my gameplay experience can be enhanced via my own
-                    scripts.
-                    However, I realised this required knowledge in C. This inspired me to start learning python in order
-                    to
-                    build up my foundation and I have since moved on to other languages such as C for a deeper
-                    understanding
-                    of
-                    how a computer works, and HTML CSS JS in order to easily build programs/websites with nice GUIs.
-                    Sticking
-                    with python was nice, but in order to make the most out of my potential, I had to move on and learn
-                    more
-                    languages and their purposes.</p>
+                    was through the Grand-Theft-Auto(GTA) modding community where my gameplay experience can be enhanced
+                    via my own scripts. However, I realised this required knowledge in C. This inspired me to start
+                    learning python in order to build up my foundation and I have since moved on to other languages such
+                    as C for a deeper understanding of how a computer works, and HTML CSS JS in order to easily build
+                    programs/websites with nice GUIs. Sticking wit more languages and their purposes.
+                    <br><br>
+                    I'm actually planning to pick up C# next to make use of the unity game engine and after I'm more or
+                    less familiar in it, I would like to transition to using unreal engine with C++.
+                </p>
             </div>
+            <br>
             <hr>
             <div class="container">
                 <p><img class="interest_pic" src="../lib/programming2.PNG"
                         alt="Image of JS earning his 2nd star on problem solving"></p>
                 <p class="info_text"><strong>How has programming improved your life?</strong><br><br>I've actually
-                    started
-                    using
-                    programs for
-                    automation since I was in secondary school. Being one that would rather "work smart" instead of
-                    "work
-                    hard",
-                    I was always one to look for better, more efficient ways to do things. This led to me experimenting
-                    with
-                    simple programs built
-                    for automation - mainly to use in games. I actually benefitted significantly because it saved me a
-                    lot
-                    of
-                    time from "grinding" these games - which meant I could spend more time resting or on schoolwork.
-                    <br><br>As
-                    someone that
-                    loves understanding
-                    how things work, I actually spent a lot of time looking through the source codes and trying my best
-                    to
-                    figure out what everything meant and
-                    how words can make a computer do stuff. Unfortunately, it was to no avail as I basically had zero
+                    started using programs for automation since I was in secondary school. Being one that would rather
+                    "work smart" instead of "work hard", I was always one to look for better, more efficient ways to do
+                    things. This led to me experimenting with simple programs built for automation - mainly to use in
+                    games. I actually benefitted significantly because it saved me a lot of time from "grinding" these
+                    games - which meant I could spend more time resting or on schoolwork.
+                    <br><br>As someone that loves understanding how things work, I actually spent a lot of time looking
+                    through the source codes and trying my best to figure out what everything meant and how words can
+                    make a computer do stuff. Unfortunately, it was to no avail as I basically had zero
                     programming knowledge at that point. It was only till I got a little older and started playing GTA
-                    before I
-                    really went and put in the effort to start learning. I really wished I started earlier though, but
-                    as a
-                    kid,
-                    my attention span was pretty short but hey, better late than never right?
+                    before I really went and put in the effort to start learning. I really wished I started earlier
+                    though, but as a kid, my attention span was pretty short but hey, better late than never right?
+                    <br><br>
+                    In addition, I seem to have taken a great interest in writing algorithms to solve mathematical
+                    problems on websites such as leetcode, hackerrank and w3schools. This feels particularly refreshing
+                    for me, someone who has spent more than 2 years in the army, as it feels as though I'm getting' to
+                    sharpen my brain mentally again after a long break.
                 </p>
             </div>
+            <br>
             <hr>
             <div class="container">
                 <p><img class="interest_pic" src="../lib/programming3.PNG" alt="Image of code acceptance on leetcode">
@@ -241,7 +229,9 @@
                     why
                     I decided to pursue a career in Technology instead of Business, considering that my Diploma was in
                     business
-                    management. Here's why. <br><br>When I graduated from secondary school, I have already set my sights
+                    management. Here's why.
+                    <br><br>
+                    When I graduated from secondary school, I have already set my sights
                     on
                     "doing business"
                     in the future. I knew that I did not want to conform to the dress codes and 8-5 school schedule that
@@ -271,8 +261,11 @@
                     making games or automation software that can improve people's way of life and efficiency. On top of
                     that,
                     having new challenges to solve frequently and doing meaningful work that can directly impact others
-                    positively on a daily basis sounds like the perfect job for me.</p>
+                    positively on a daily basis sounds like the perfect job for me.
+                    <br>
+                </p>
             </div>
+            <br>
         </div>
         <br><br><br>
     </section>
@@ -313,6 +306,12 @@
                 internships in the gaming industry to gain experience. My long term goal would be to one day lead a team
                 of
                 competent software engineers in developing games or anti-cheat software.
+                <br><br>
+                If not, I would love to lead a competent team towards building, designing and maintaining software that
+                adds values to people's lives. Reading about how software advances such as apple watch's fall detection
+                system helping save the life of a motorcyclist back in September 2021 after a hit and run really warms
+                my heart. If I am unable to work with games as a career, I would love to at least be developing software
+                that can better others' lives.
             </p>
         </div>
     </section>
