--- a/website/projects.html
+++ b/website/projects.html
@@ -62,9 +62,12 @@
     <section>
         <h1>Games</h1>
         <p class="info_text">
-            This section is incomplete. There will only be javascript games linked.. for now. No downloads required :)
+            This section is incomplete. There will only be javascript projects linked.. for now. No downloads required
+            :)
         </p>
-        <p style="text-align: center; font-size: 2em;"><a href="../games/arrow_game/ag.html">Arrow game</a></p>
+        <p style="text-align: center; font-size: 2em;"><a href="../projects/games/arrow_game/ag.html">Arrow game</a></p>
+        <p style="text-align: center; font-size: 2em;"><a href="../projects/practical/todo_app/todo.html">To-do app</a>
+        </p>
     </section>
 
     <footer>
