--- a/website/about.html
+++ b/website/about.html
@@ -282,7 +282,7 @@
         <br> <br> <br> <br> <br>
         <h1 class="cursive animated revealU relative" id="goals">My goals</h1>
         <div>
-            <p><img class="interest_pic animated revealU" src="https://wallpaperaccess.com/full/3278874.jpg"
+            <p><img class="med_img animated revealU" src="https://wallpaperaccess.com/full/3278874.jpg"
                     alt="Image of a football goal">
             </p>
             <p class="info_text animated revealU"><strong>My career goals</strong> <br><br>
