--- a/website/proficiencies.html
+++ b/website/proficiencies.html
@@ -83,7 +83,7 @@
         </div>
         <br> <br> <br> <br> <br>
         <div id="skills" class="margin">
-            <h1 class="goals animated revealU">Skills</h1>
+            <h1 class="goals">Skills</h1>
             <h2 class="animated revealU">Technical skills</h2>
             <div class="flex" style="width: 85%;">
                 <p class="info_text tskill animated revealL">
