--- a/website/resume.html
+++ b/website/resume.html
@@ -57,169 +57,178 @@
         </div>
     </header>
 
-    <h1 class="hname" id="top">Jing Seng Poh</h1>
-    <hr>
+    <div class="resume">
+        <h1 class="hname" id="top">Jing Seng Poh</h1>
+        <hr>
 
-    <h2 class="sect">Contact</h2>
-    <img class="portrait" src="../lib/js_portrait.png" alt="A picture of JS">
-    <p class="hide">Mobile: 9009 9178</p>
-    <p class="hide">Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
-    <br>
-    <p class="">Email: <a class="hlink" href="https://jspoh.github.io/contact.html">Click here to email me!</a></p>
-    <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh" target="_blank">linkedin.com/in/js-poh</a>
-    </p>
-    <hr>
-
-    <h2 class="sect">Career objective</h2>
-    <p>Keen on pursuing a career in the technological sector, particularly in software engineering. <br>Currently
-        looking for positions in related fields. Open to internships too!</p>
-    <hr>
-
-    <h2 class="sect">Project experience</h2>
-    <p>All my projects are available <a class="hlink" href="https:\\github.com/jspoh" target="_blank">here</a>
-        (github.com/jspoh)</p>
-    <hr>
-
-    <h2 class="sect">Education</h2>
-    <div class="flex">
-        <p class="year">2022 - Present</p>
-        <p class="edu_present">Incoming undergraduate at SUSS<br>Bsc in Information and Communications Technology</p>
-    </div>
-    <div class="flex">
-        <p class="year">2017 - 2020</p>
-        <p class="edu">Nanyang Polytechnic<br>Diploma in Business Management<br>Specialisation in Human Resource
-            Management
-            and International Business</p>
-    </div>
-    <hr>
-
-    <h2 class="sect">Professional certifications</h2>
-    <ul>
-        <li>Python(Basic) Certificate - HackerRank</li>
-        <li>WSQ Certificate in Security - SAF MP Command</li>
-        <li>FB-RM-102C-1 Follow food and beverage safety and hygiene policies and procedures</li>
-    </ul>
-    <hr>
-
-    <h2 class="sect">Work experience</h2>
-    <ul>
-        <li>
-            <p>Singapore Armed Forces (May 2020 - Aug 2022)</p>
-            <p style="margin-top: -15px;">Position: Guard Commander</p>
-            <ul>
-                <li>Responsibilities</li>
-                <ul>
-                    <li>Planned and drafted duty rosters every 2-3 days</li>
-                    <li>In charge of day to day operations, including responding to alarms and emergencies</li>
-                    <li>Conducted trainings and assessments</li>
-                    <li>Liaised effectively with multiple contractors on a monthly basis to respond to infrastructure
-                        faults
-                    </li>
-                    <li>Management of conflicts between my subordinates and others</li>
-                    <li>Information gathering and writing incident reports</li>
-                    <li>Took care of the welfare and health of my subordinates</li>
-                    <li>Ensured timeliness of certain operational demands for Search And Rescue(SAR) missions in which
-                        many lives have been saved</li>
-                </ul>
-                <li>Awards</li>
-                <ul>
-                    <li>Best in knowledge - Force protection term at Tengah Airbase</li>
-                    <li>Best airman of the month - July 2021</li>
-                    <li>High Achiever Award - March 2022</li>
-                    <li>605SQN Command Chief coin recipient</li>
-                    <li>606SQN Commanding Officer coin recipient</li>
-                </ul>
-            </ul>
-            <p>Accepted an offer for a 200% pay increment and multiple benefits to extend service for 3 months</p>
-        </li>
+        <h2 class="sect">Contact</h2>
+        <img class="portrait" src="../lib/js_portrait.png" alt="A picture of JS">
+        <p class="hide">Mobile: 9009 9178</p>
+        <p class="hide">Email: <a class="hlink" href="mailto:jingsengpoh@gmail.com">jingsengpoh@gmail.com</a></p>
         <br>
-        <li>
-            <p>Air Force Recruitment Centre (Sep 2020 - Dec 2020)</p>
-            <p style="margin-top: -15px;">Position: Officer recruitment processing assistant / Pilot(trainee)</p>
-            <ul>
-                <li>Responsibilities</li>
+        <p class="">Email: <a class="hlink" href="https://jspoh.github.io/contact.html">Click here to email me!</a></p>
+        <p>Linkedin: <a class="hlink" href="https://www.linkedin.com/in/js-poh"
+                target="_blank">linkedin.com/in/js-poh</a>
+        </p>
+        <hr>
+
+        <h2 class="sect">Career objective</h2>
+        <p>Keen on pursuing a career in the technological sector, particularly in software engineering. <br>Currently
+            looking for positions in related fields. Open to internships too!</p>
+        <hr>
+
+        <h2 class="sect">Project experience</h2>
+        <p>All my projects are available <a class="hlink" href="https:\\github.com/jspoh" target="_blank">here</a>
+            (github.com/jspoh)</p>
+        <hr>
+
+        <h2 class="sect">Education</h2>
+        <div class="flex">
+            <p class="year">2022 - Present</p>
+            <p class="edu_present">Incoming undergraduate at SUSS<br>Bsc in Information and Communications Technology
+            </p>
+        </div>
+        <div class="flex">
+            <p class="year">2017 - 2020</p>
+            <p class="edu">Nanyang Polytechnic<br>Diploma in Business Management<br>Specialisation in Human Resource
+                Management
+                and International Business</p>
+        </div>
+        <hr>
+
+        <h2 class="sect">Professional certifications</h2>
+        <ul>
+            <li>Python(Basic) Certificate - HackerRank</li>
+            <li>WSQ Certificate in Security - SAF MP Command</li>
+            <li>FB-RM-102C-1 Follow food and beverage safety and hygiene policies and procedures</li>
+        </ul>
+        <hr>
+
+        <h2 class="sect">Work experience</h2>
+        <ul>
+            <li>
+                <p>Singapore Armed Forces (May 2020 - Aug 2022)</p>
+                <p style="margin-top: -15px;">Position: Guard Commander</p>
                 <ul>
-                    <li>Liaised with prospective applicants on application information</li>
+                    <li>Responsibilities</li>
                     <ul>
-                        <li>Medical appointments</li>
-                        <li>Web briefings</li>
-                        <li>Document submissions</li>
-                        <li>Contract signings</li>
-                    </ul>
-                    <li>Clarified applicants' concerns</li>
-                    <li>Ensured smooth day to day operations for my superior</li>
-                </ul>
-            </ul>
-        </li>
-        <br><br>
-        <li>
-            <p>WBL Engineering & Distribution (Nov 2019 - Feb 2020)</p>
-            <p style="margin-top: -15px;">Position: Human Resources Intern</p>
-            <ul>
-                <li>Responsibilities</li>
-                <ul>
-                    <li>Handled the entire spectrum of recruitment functions</li>
-                    <ul>
-                        <li>Talent acquisition</li>
-                        <li>Resume and phone screenings</li>
-                        <li>Conducting of interviews</li>
-                        <li>Drafting salary proposals</li>
-                        <li>Preparation and facilitation of contract signings</li>
-                        <li>Coordination of employee orientations</li>
-                        <li>Filing of employee documents and entering details into Human Resources Information
-                            Systems(HRIS)</li>
-                    </ul>
-                    <li>Refreshing of Job Description(JD) depositories and writing up new ones in accordance to ISO
-                        requirements</li>
-                    <li>Set-up training plans for employees for the work year 2020</li>
-                    <li>Researched and presented ITE, Polytechnics and Universities internship data</li>
-                    <li>Supported HRIS migration from Prosoft to BIPO</li>
-                    <li>Planning and execution of employee engagement events(Chinese new year and helping out at an
-                        elderly home)</li>
-                    <ul>
-                        <li>Attendance of over 70 employees</li>
-                    </ul>
-                </ul>
-            </ul>
-        </li>
-        <br><br>
-        <li>
-            <p>Careerlink @ NYP (Sep 2019 - Nov 2019)</p>
-            <p style="margin-top: -15px;">Position: Human Resources Intern</p>
-            <ul>
-                <li>Conducted talent acquisition processes for multiple companies</li>
-                <ul>
-                    <li>Designing of job posters for advertising</li>
-                    <li>Cold calling and email potential talents</li>
-                    <li>Conducted interviews and selections</li>
-                    <li>Recommending prospective candidates to company HR managers</li>
-                </ul>
-                <li>Head of planning and execution of employee engagement event(Games day)</li>
-                <ul>
-                    <li>Attendance of over 20 employees</li>
-                    <li>100% employee satisfaction rate</li>
-                </ul>
-                <li>Handled projects for multiple companies</li>
-                <ul>
-                    <li>Natsteel</li>
-                    <ul>
-                        <li>Planned and executed the "Bring your family to work day 2019" employee engagement event with
-                            over 100 employees turning up</li>
-                    </ul>
-                    <li>Heinemann</li>
-                    <ul>
-                        <li>Creation of employee value propositions</li>
-                    </ul>
-                    <li>Dentons Rodyk</li>
-                    <ul>
-                        <li>Deriving low cost and practical solutions from the training needs analysis for secretaries
+                        <li>Planned and drafted duty rosters every 2-3 days</li>
+                        <li>In charge of day to day operations, including responding to alarms and emergencies</li>
+                        <li>Conducted trainings and assessments</li>
+                        <li>Liaised effectively with multiple contractors on a monthly basis to respond to
+                            infrastructure
+                            faults
                         </li>
+                        <li>Management of conflicts between my subordinates and others</li>
+                        <li>Information gathering and writing incident reports</li>
+                        <li>Took care of the welfare and health of my subordinates</li>
+                        <li>Ensured timeliness of certain operational demands for Search And Rescue(SAR) missions in
+                            which
+                            many lives have been saved</li>
+                    </ul>
+                    <li>Awards</li>
+                    <ul>
+                        <li>Best in knowledge - Force protection term at Tengah Airbase</li>
+                        <li>Best airman of the month - July 2021</li>
+                        <li>High Achiever Award - March 2022</li>
+                        <li>Best airman of the month - April 2022</li>
+                        <li>605SQN Command Chief coin recipient</li>
+                        <li>606SQN Commanding Officer coin recipient</li>
                     </ul>
                 </ul>
-            </ul>
-        </li>
-    </ul>
-    <br>
+                <p>Accepted an offer for a 200% pay increment and multiple benefits to extend service for 3 months</p>
+            </li>
+            <br>
+            <li>
+                <p>Air Force Recruitment Centre (Sep 2020 - Dec 2020)</p>
+                <p style="margin-top: -15px;">Position: Officer recruitment processing assistant / Pilot(trainee)</p>
+                <ul>
+                    <li>Responsibilities</li>
+                    <ul>
+                        <li>Liaised with prospective applicants on application information</li>
+                        <ul>
+                            <li>Medical appointments</li>
+                            <li>Web briefings</li>
+                            <li>Document submissions</li>
+                            <li>Contract signings</li>
+                        </ul>
+                        <li>Clarified applicants' concerns</li>
+                        <li>Ensured smooth day to day operations for my superior</li>
+                    </ul>
+                </ul>
+            </li>
+            <br><br>
+            <li>
+                <p>WBL Engineering & Distribution (Nov 2019 - Feb 2020)</p>
+                <p style="margin-top: -15px;">Position: Human Resources Intern</p>
+                <ul>
+                    <li>Responsibilities</li>
+                    <ul>
+                        <li>Handled the entire spectrum of recruitment functions</li>
+                        <ul>
+                            <li>Talent acquisition</li>
+                            <li>Resume and phone screenings</li>
+                            <li>Conducting of interviews</li>
+                            <li>Drafting salary proposals</li>
+                            <li>Preparation and facilitation of contract signings</li>
+                            <li>Coordination of employee orientations</li>
+                            <li>Filing of employee documents and entering details into Human Resources Information
+                                Systems(HRIS)</li>
+                        </ul>
+                        <li>Refreshing of Job Description(JD) depositories and writing up new ones in accordance to ISO
+                            requirements</li>
+                        <li>Set-up training plans for employees for the work year 2020</li>
+                        <li>Researched and presented ITE, Polytechnics and Universities internship data</li>
+                        <li>Supported HRIS migration from Prosoft to BIPO</li>
+                        <li>Planning and execution of employee engagement events(Chinese new year and helping out at an
+                            elderly home)</li>
+                        <ul>
+                            <li>Attendance of over 70 employees</li>
+                        </ul>
+                    </ul>
+                </ul>
+            </li>
+            <br><br>
+            <li>
+                <p>Careerlink @ NYP (Sep 2019 - Nov 2019)</p>
+                <p style="margin-top: -15px;">Position: Human Resources Intern</p>
+                <ul>
+                    <li>Conducted talent acquisition processes for multiple companies</li>
+                    <ul>
+                        <li>Designing of job posters for advertising</li>
+                        <li>Cold calling and email potential talents</li>
+                        <li>Conducted interviews and selections</li>
+                        <li>Recommending prospective candidates to company HR managers</li>
+                    </ul>
+                    <li>Head of planning and execution of employee engagement event(Games day)</li>
+                    <ul>
+                        <li>Attendance of over 20 employees</li>
+                        <li>100% employee satisfaction rate</li>
+                    </ul>
+                    <li>Handled projects for multiple companies</li>
+                    <ul>
+                        <li>Natsteel</li>
+                        <ul>
+                            <li>Planned and executed the "Bring your family to work day 2019" employee engagement event
+                                with
+                                over 100 employees turning up</li>
+                        </ul>
+                        <li>Heinemann</li>
+                        <ul>
+                            <li>Creation of employee value propositions</li>
+                        </ul>
+                        <li>Dentons Rodyk</li>
+                        <ul>
+                            <li>Deriving low cost and practical solutions from the training needs analysis for
+                                secretaries
+                            </li>
+                        </ul>
+                    </ul>
+                </ul>
+            </li>
+        </ul>
+        <br>
+    </div>
     <hr>
     <footer>
         <p style="text-align : center;"><a class="hlink" href="#top">Back to top</a></p>
