--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
     <h1 id="welcomemsg"></h1>
-    <h2 id="skip">Skip>></h2>
+    <h2 id="skip" style="opacity: 0;">Skip>></h2>
     <script src="indexscript.js"></script>
 </body>
 
