--- a/website/contact.html
+++ b/website/contact.html
@@ -17,9 +17,7 @@
             <!--interests, goals, strengths-->
             <div class="dropdown_content">
                 <a href="about.html#intro">Introduction</a>
-                <a href="about.html#int_sanda">Interest - Sanda kickboxing</a>
-                <a href="about.html#int_piano">Interest - Playing the piano</a>
-                <a href="about.html#int_pro">Interest - Programming</a>
+                <a href="about.html#int">Interests</a>
                 <a href="about.html#goals">Goals</a>
             </div>
         </div>
@@ -39,8 +37,7 @@
             <!--My HTMLCSSJS games, python games, automation, telegram bots etc-->
             <div class="dropdown_content">
                 <a href="projects.html#games">Games</a>
-                <a href="projects.html#auto">Automation</a>
-                <a href="projects.html#bot">Bots</a>
+                <a href="projects.html#prac">Practical applications</a>
             </div>
         </div>
         <div class="dropdown">
