--- a/website/projects.html
+++ b/website/projects.html
@@ -64,8 +64,9 @@
             <div id="ag" class="project hide">
                 <h1>Arrow game</h1> <br>
                 <b>
-                    <a class="srcCode" href="https://github.com/jspoh/arrow_game">Source code</a> <br> <br>
-                    Click <a href='https://jspoh.github.io/projects/games/arrow_game/ag.html' target='_blank'>here</a>
+                    <a class="srcCode" target="_blank" href="https://github.com/jspoh/arrow_game">Source code</a> <br>
+                    <br>
+                    Click <a href='../projects/games/arrow_game/ag.html' target='_blank'>here</a>
                     to play the game in your browser! <br>
                     Available on both desktop and mobile!
                 </b>
@@ -74,6 +75,7 @@
                 <hr>
                 <br>
                 Game objective: Respond accordingly to the directional commands given before the time runs out! <br>
+                <br>
                 Features: <br>
                 - Easy to play, no need to install. Just visit the website! <br>
                 - Score and highscore system <br>
@@ -120,9 +122,10 @@
             <div id="tdt" class="project hide">
                 <h1>To-do tracker</h1> <br>
                 <b>
-                    <a href="https://github.com/jspoh/arrow_game" class="srcCode">Source code</a> <br> <br>
-                    Available <a href="https://jspoh.github.io/projects/practical/todo_app/todo.html"
-                        target="_blank">here</a> on both desktop and mobile
+                    <a href="https://github.com/jspoh/todo_tracker" target="_blank" class="srcCode">Source code</a> <br>
+                    <br>
+                    Available <a href="../projects/practical/todo_app/todo.html" target="_blank">here</a> on both
+                    desktop and mobile
                 </b> <br>
                 <b>
                     To-do tracking list that stores data locally. So that you never lose your unclosed/undone to-do
@@ -154,27 +157,56 @@
                 Autoclicker (Python)<span class="flushRight">&#x25BC;</span>
             </p>
             <div id="autoclicker" class="project hide">
-                <h1>Autoclicker</h1> <br>
+                <h1>Auto clicker</h1> <br>
                 <b>
                     <a href="https://github.com/jspoh/jspoh.github.io/blob/main/projects/practical/autoclicker/autoclicker.py"
-                        class="srcCode">Source code</a> <br><br>
+                        target="_blank" class="srcCode">Source code</a> <br><br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
                     paste the code in notepad. Change the extension to '.py'
                 </b>
                 <br> <br>
-                <hr>
+                <hr> <br>
+                This program will start autoclicking wherever your mouse is located when the hotkey [F8] is pushed. The
+                same hotkey [F8] will stop the autoclicking. The user may choose up to 3 speed settings when using the
+                program although speed setting 1 should be fast enough for most users.
+                <br>
                 <br>
                 <img src="../projects/practical/autoclicker/lib/main.PNG"
                     alt="Screenshot of Pycharm console running autoclicker.py" class="curve">
                 <br> <br>
                 This is what you will see in the console when running this program. <br>
-                <br>
-                Program features: <br>
-                - 3 speed settings <br>
-                - Start/stop hotkey <br>
-                <br>
-                This program will send clicks to where-ever your moused is positioned at the moment. <br>
+            </div>
+        </div>
+        <br>
+        <div class="projectContainer">
+            <p class="projectTab" onclick="ocTab('#autoemail');">
+                Automated email sender (Python)<span class="flushRight">&#x25BC;</span>
+            </p>
+            <div id="autoemail" class="project hide">
+                <h1>Auto email sender</h1> <br>
+                <b>
+                    <a href="https://github.com/jspoh/jspoh.github.io/blob/main/projects/practical/auto_email/auto_email.py"
+                        target="_blank" class="srcCode">Source code</a> <br> <br>
+                    To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
+                    If you don't have any IDEs or Code editors for python, you will have to install python shell and
+                    paste the code in notepad. Change the extension to '.py'
+                    <br> <br>
+                    <hr> <br>
+                    This program will send an email to your intended recipient. Email elements such as sender, title,
+                    and message are set by the user. Main feature of this program is that you can use it to schedule
+                    email messages.
+                    <br>
+                    <br>
+                    <img src="../projects/practical/auto_email/lib/main.PNG" alt="" class="curve">
+                    <br><br>
+                    This is what the main program will look like
+                    <br> <br>
+                    <img src="../projects/practical/auto_email/lib/email.PNG" alt="" class="curve">
+                    <br><br>
+                    This is what it will look like for the recipient
+                    <br>
+                </b>
             </div>
         </div>
     </section>
